--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.16.0",
+    "axios": "^0.19.0",
     "chart.js": "^2.5.0",
     "express": "^4.15.2",
     "react": "^15.4.2",
@@ -11,7 +11,7 @@
     "react-dom": "^15.4.2"
   },
   "devDependencies": {
-    "react-scripts": "0.9.5"
+    "react-scripts": "^3.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
